--- a/styles.css
+++ b/styles.css
@@ -197,7 +197,7 @@ img {
 .project-container {
   display: grid;
   gap: 50px;
-  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(40%, 1fr));
   grid-template-rows: repeat(auto-fill, minmax(200px, 1fr));
 }
 .project-card {
