--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,9 @@
 :root {
-  --default-size: 20px;
+  --default-size: 15px;
+  --color-1: #e0f2fe;
+  --color-2: #7dd3fc;
+  --color-3: #0369a1;
+  --color-0: #ff8400;
 }
 
 *,
@@ -10,7 +14,6 @@
 
 body {
   margin: 0;
-  background-color: #f7f8fc;
   min-height: 100vh;
   height: 100%;
 
@@ -43,11 +46,11 @@ img {
 /*header section starts here*/
 .header {
   position: sticky;
-  gap: 20px;
-  padding: 20px 60px;
+  gap: 10px;
+  padding: 20px 20px;
   grid-area: header;
   border: none;
-  background-color: #e0f2fe;
+  background-color: var(--color-1);
   display: grid;
   grid-template-rows: 1fr 2fr;
   grid-template-columns: 2fr 1fr;
@@ -61,7 +64,7 @@ img {
   align-items: center;
 }
 .search-bar {
-  background-color: #0369a1;
+  background-color: var(--color-2);
   border: none;
   min-width: 50px;
   margin: 0 20px;
@@ -71,21 +74,17 @@ img {
 }
 
 .search-profile {
-  gap: 30px;
+  gap: 0px;
   grid-area: search-profile;
   display: grid;
-  grid-template-columns: 1fr auto auto auto;
+  grid-template-columns: repeat(6, auto);
   justify-items: right;
   align-items: center;
 }
-
-.search-profile svg {
-  justify-self: right;
-}
 .search-profile img {
   justify-self: right;
-  width: 40px;
-  height: 40px;
+  width: 30px;
+  height: 30px;
 }
 .search-profile :first-child {
   width: 30px;
@@ -118,15 +117,15 @@ img {
   height: 40px;
   border-radius: 20px;
   border: none;
-  background-color: #0369a1;
+  background-color: var(--color-3);
   color: #f7f8fc;
 }
 /*side starts here*/
 .sidebar {
   height: 100%;
-  position: fixed;
+
   grid-area: sidebar;
-  background-color: #0369a1;
+  background-color: var(--color-3);
   text-transform: capitalize;
   display: grid;
   grid-template-rows: auto auto 1fr;
@@ -142,7 +141,7 @@ img {
   align-items: center;
   padding: 0px 30px;
   gap: 20px;
-  font-size: calc(var(--default-size) + 10px);
+  font-size: calc(var(--default-size) + 5px);
 }
 
 .dashboard img {
@@ -173,11 +172,11 @@ img {
 .content {
   height: 100%;
   grid-area: content;
-  background-color: #7dd3fc;
+  background-color: var(--color-2);
   display: grid;
   grid-template-columns: 3fr 1fr;
   grid-template-rows: auto auto;
-  grid-template-areas: "project announcement" "project trending";
+  grid-template-areas: "project anouncement" "project trending";
 }
 
 .project {
@@ -196,14 +195,14 @@ img {
 }
 .project-container {
   display: grid;
-  gap: 50px;
+  gap: 100px 50px;
   grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
 }
 .project-card {
   padding: 10px;
-  background-color: #e0f2fe;
+  background-color: var(--color-1);
   border-radius: 20px;
-  border-left: 10px solid rgb(255, 132, 0);
+  border-left: 10px solid var(--color-0);
   font-size: var(--default-size);
   display: grid;
   grid-template-rows: auto 1fr auto;
@@ -220,9 +219,13 @@ img {
 .card-btn a {
   margin: 10px;
 }
+.card-btn img {
+  width: 30px;
+  height: 30px;
+}
 
 .anouncement {
-  grid-area: announcement;
+  grid-area: anouncement;
   padding: 30px;
   display: grid;
   gap: 20px;
@@ -230,7 +233,7 @@ img {
 }
 .anouncement-container,
 .trending-container {
-  background-color: #e0f2fe;
+  background-color: var(--color-1);
   padding: 20px;
   border-radius: 20px;
 }
